# mdict-test

./: .gitignore  Cargo.toml
dict/: .gitattributes
src/: lib.rs  main.rs  mdict.rs
