[package]
name = "mdict-test"
version = "0.1.0"
authors = ["jiangjw <jiangjw@koal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "*"
flate2 = "*"
ripemd128 = "*"
byteorder = "*"
thiserror = "*"
serde = { version = "*", features = [ "derive" ] }
quick-xml = { version = "*", features = [ "serialize" ] }
